--- a/CircleBirds/CircleBirds.vcxproj
+++ b/CircleBirds/CircleBirds.vcxproj
@@ -100,7 +100,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;Box2D_Debug.lib;Box2D_Release.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
