Updated Constructor for textures

--- a/CircleBirds/CircleBirds.vcxproj.filters
+++ b/CircleBirds/CircleBirds.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="PlayerHandler.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utilities.h">
@@ -125,8 +128,11 @@
     <ClInclude Include="ContactListener.h">
       <Filter>Header Files\Listeners</Filter>
     </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
     <ClInclude Include="PlayerHandler.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
