--- a/CircleBirds/CircleBirds.vcxproj
+++ b/CircleBirds/CircleBirds.vcxproj
@@ -137,12 +137,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="PhysicsEntity.cpp" />
+    <ClCompile Include="Pig.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerHandler.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -154,19 +154,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContactListener.h" />
-    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="PhysicsEntity.h" />
+    <ClInclude Include="Pig.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerHandler.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="StoneBrick.h" />
     <ClInclude Include="TextLabel.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Utilities.h" />
+    <ClInclude Include="WoodPlank.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
