Added second game scene

--- a/CircleBirds/CircleBirds.vcxproj.filters
+++ b/CircleBirds/CircleBirds.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="TextLabel.cpp">
       <Filter>Source Files\Entities\UI</Filter>
     </ClCompile>
+    <ClCompile Include="GameScene2.cpp">
+      <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utilities.h">
@@ -160,6 +163,9 @@
     </ClInclude>
     <ClInclude Include="Pig.h">
       <Filter>Header Files\Entities\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene2.h">
+      <Filter>Header Files\Scenes</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
