--- a/CircleBirds/CircleBirds.vcxproj
+++ b/CircleBirds/CircleBirds.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="GameScene2.cpp" />
     <ClCompile Include="MenuScene.cpp" />
     <ClCompile Include="PhysicsEntity.cpp" />
     <ClCompile Include="Pig.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="GameScene2.h" />
     <ClInclude Include="MenuScene.h" />
     <ClInclude Include="PhysicsEntity.h" />
     <ClInclude Include="Pig.h" />
